Cycles - No viewport rendering update, when changing shader parameters in World Texture Group Node #60266

Closed
opened 2019-01-07 12:09:33 +01:00 by Marcus Papathoma · 8 comments

System Information
Operating system: Windows 10 x64
Graphics card: Geforece 1080Ti

Blender Version
Broken: 2.80, 96f762500e, 2018-01-07, as found on the splash screen)

Short description of error
Cycles - No viewport rendering update, when changing shader parameters in World Texture Group Node

Exact steps for others to reproduce the error
Open the attached *.blend file.
In the 3D-viewport activate viewport rendering.
In the compositing view on the bottom change the Sky_Strength attribute of the Sky_Sun_Control group node to 0. Nothing happens.
In the Properties on the right switch form Sky_001 to World and back. Now you see the effect of the Sky_Strength attribute change.
Sky_Texture_not_updating.blend

**System Information** Operating system: Windows 10 x64 Graphics card: Geforece 1080Ti **Blender Version** Broken: 2.80, 96f762500ef9, 2018-01-07, as found on the splash screen) **Short description of error** Cycles - No viewport rendering update, when changing shader parameters in World Texture Group Node **Exact steps for others to reproduce the error** Open the attached *.blend file. In the 3D-viewport activate viewport rendering. In the compositing view on the bottom change the Sky_Strength attribute of the Sky_Sun_Control group node to 0. Nothing happens. In the Properties on the right switch form Sky_001 to World and back. Now you see the effect of the Sky_Strength attribute change. [Sky_Texture_not_updating.blend](https://archive.blender.org/developer/F6208895/Sky_Texture_not_updating.blend)

Added subscriber: @machieb

Added subscriber: @machieb

I just created another Blender Scene with an simpler world node setup.
World_HDR.blend
Open the Scene
Click the Viewport render icon.
Change the strength in the Background node in the shading tab.
In the properties Tab switch from Studio_052 to Studio_053.
Change the strength in the Background node in the shading tab. Nothing happens. Cycles is not updating.

I just created another Blender Scene with an simpler world node setup. [World_HDR.blend](https://archive.blender.org/developer/F6219887/World_HDR.blend) Open the Scene Click the Viewport render icon. Change the strength in the Background node in the shading tab. In the properties Tab switch from Studio_052 to Studio_053. Change the strength in the Background node in the shading tab. Nothing happens. Cycles is not updating.

Added subscriber: @brecht

Added subscriber: @brecht

I can't reproduce this problem with either .blend file.

Does it still happen after loading factory settings?

I can't reproduce this problem with either .blend file. Does it still happen after loading factory settings?

I tried it also on another computer with fresh user settings and reseted to factory defaults. The problem is still there.
It is strange, the viewport update works if Studio_052 is set as World, but if you switch to Studio_053 as World the viewport update isn´t working.
There is only an update once in Studio_053 World when you switch from Studio_052 to it. But once Studio_053 is set, changing for example the strength or rotating in the Mapping Node, has no effect at all.
I tried as described above.

Open the Scene World_HDR.blend
Click the Viewport render icon.
Change the strength in the Background node in the shading tab to 0. The Viewport rendering is updated.
In the properties World tab switch from Studio_052 to Studio_053. The Viewport rendering is updated.
Now change the strength in the Background node in the Shader Editor to 0. Nothing happens. Cycles is not updating.
In the properties World tab switch from Studio_053 to Studio_052 and back to Studio_053. Now the Viewport shows the correct result.
Now you can try to change the strength in the Background node in the Shader Editor to 1. No Viewport Update. Try to Z-rotate in the mapping node. No Update.

I tried it also on another computer with fresh user settings and reseted to factory defaults. The problem is still there. It is strange, the viewport update works if Studio_052 is set as World, but if you switch to Studio_053 as World the viewport update isn´t working. There is only an update once in Studio_053 World when you switch from Studio_052 to it. But once Studio_053 is set, changing for example the strength or rotating in the Mapping Node, has no effect at all. I tried as described above. Open the Scene World_HDR.blend Click the Viewport render icon. Change the strength in the Background node in the shading tab to 0. The Viewport rendering is updated. In the properties World tab switch from Studio_052 to Studio_053. The Viewport rendering is updated. Now change the strength in the Background node in the Shader Editor to 0. Nothing happens. Cycles is not updating. In the properties World tab switch from Studio_053 to Studio_052 and back to Studio_053. Now the Viewport shows the correct result. Now you can try to change the strength in the Background node in the Shader Editor to 1. No Viewport Update. Try to Z-rotate in the mapping node. No Update.

I tested yet another file.
Sky_Texture_not_updating.blend

It seems that only one World is working correctly. When switching to another World and trying to adjust Parameters there is no cycles viewport update.

Open Blender Scene.
Activate Viewport rendering Sky_not_updating_render.JPG
Change the Background_Strength in the Sky_Sun_Control node in the Shader Editor to 0. The Viewport rendering is updated.
In the properties World tab switch from Sky_001 to Sky_002. The Viewport rendering is updated.
Change the Background_Strength in the Sky_Sun_Control node in the Shader Editor to 0. The Viewport rendering isn´t updated.

Only changes in Sky_001 World is updated in the viewport!

I tested yet another file. [Sky_Texture_not_updating.blend](https://archive.blender.org/developer/F6228297/Sky_Texture_not_updating.blend) It seems that only one World is working correctly. When switching to another World and trying to adjust Parameters there is no cycles viewport update. Open Blender Scene. Activate Viewport rendering ![Sky_not_updating_render.JPG](https://archive.blender.org/developer/F6228273/Sky_not_updating_render.JPG) Change the Background_Strength in the Sky_Sun_Control node in the Shader Editor to 0. The Viewport rendering is updated. In the properties World tab switch from Sky_001 to Sky_002. The Viewport rendering is updated. Change the Background_Strength in the Sky_Sun_Control node in the Shader Editor to 0. The Viewport rendering isn´t updated. Only changes in Sky_001 World is updated in the viewport!

This issue was referenced by bf7a1ef11e

This issue was referenced by bf7a1ef11e5b5b9054e43fe791b4cf95506fd7b9

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#60266
No description provided.