Fix T60266: missing viewport updates after changing scene world datablock.