source/blender/makesrna/intern/rna_scene.c
@@ -1392,6 +1392,7 @@ static void rna_Scene_world_update(Main *bmain, Scene *scene, PointerRNA *ptr)
 
 	rna_Scene_glsl_update(bmain, scene, ptr);
 	WM_main_add_notifier(NC_WORLD | ND_WORLD, &sc->id);
+	DEG_relations_tag_update(bmain);
 }
 
 void rna_Scene_freestyle_update(Main *UNUSED(bmain), Scene *UNUSED(scene), PointerRNA *ptr)
